--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -20,6 +20,11 @@
     </head>
     <body>
         <form action="" data-method="get">
+            <div class="g-title">布局组件 - 模块</div>
+            <div class="g-module">
+                <div class="g-module-title">模块标题</div>
+                <div>模块内容</div>
+            </div>
             <div class="g-title">布局组件 - 列表系列</div>
             <div class="g-list-wrap">
                 <a href="" class="g-list js-g-tooltip" data-title="功能组件(g-tooltip) - 点击进入首页">
@@ -50,7 +55,7 @@
                 </a>
             </div>
             <div class="g-title">布局组件 - 表单系列</div>
-            <div class="g-form-wrap">
+            <div class="g-form-wrap g-form-wrap_style3">
                 <div class="g-form">
                     <div class="g-form-body">
                         <div class="g-form-body-text">金额:</div>
