--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -20,10 +20,10 @@
     </head>
     <body>
         <form action="" data-method="get">
-            <div class="g-title">布局组件 - 模块</div>
-            <div class="g-module">
-                <div class="g-module-title">模块标题</div>
-                <div>模块内容</div>
+            <div class="g-title">布局组件 - 面板</div>
+            <div class="g-panel">
+                <div class="g-panel-title">面板标题</div>
+                <div>面板内容</div>
             </div>
             <div class="g-title">布局组件 - 列表系列</div>
             <div class="g-list-wrap">
@@ -55,7 +55,7 @@
                 </a>
             </div>
             <div class="g-title">布局组件 - 表单系列</div>
-            <div class="g-form-wrap g-form-wrap_style3">
+            <div class="g-form-wrap g-form-wrap_style4">
                 <div class="g-form">
                     <div class="g-form-body">
                         <div class="g-form-body-text">金额:</div>
