--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -55,7 +55,7 @@
                 </a>
             </div>
             <div class="g-title">布局组件 - 表单系列</div>
-            <div class="g-form-wrap g-form-wrap_style4">
+            <div class="g-form-wrap">
                 <div class="g-form">
                     <div class="g-form-body">
                         <div class="g-form-body-text">金额:</div>
