--- a/src/scss/components/g-list.scss
+++ b/src/scss/components/g-list.scss
@@ -22,6 +22,10 @@
         .g-list {
             margin-bottom: 0;
             border-bottom: none;
+            padding-bottom: 0;
+            &:last-of-type {
+                padding-bottom: px2rem(15);
+            }
         }
     }
 }
