--- a/src/scss/components/g-list.scss
+++ b/src/scss/components/g-list.scss
@@ -28,6 +28,11 @@
             }
         }
     }
+    &.g-list-wrap_style4 { // padding放大
+        .g-list {
+            padding: px2rem(15) px2rem(10);
+        }
+    }
 }
 
 .g-list {
