--- a/src/scss/commons/g-common.scss
+++ b/src/scss/commons/g-common.scss
@@ -39,6 +39,7 @@
 @import "../components/g-title";
 @import "../components/g-sort-tab";
 @import "../components/g-progress-bar";
+@import "../components/g-single-line";
 
 .g-panel {
     @extend .g-reset_font;
